<resources>
    <string name="about_us">About Us</string>
    <string name="account_name">Account Name: Nistores Nigeria Limited </string>
    <string name="account_number">Account Number: 0248148259 </string>
    <string name="action_refresh">Refresh</string>
    <string name="add_to_contacts">Add to Contacts</string>
    <string name="address">Address</string>
    <string name="additional_info">Additional Info</string>
    <string name="admin">Admin</string>
    <string name="admin_section">Admin Section</string>
    <string name="all_delivery_orders">All Delivery Orders</string>
    <string name="all_the_states_could_not">Couldn\'t load all the 36 states </string>
    <string name="already_approved">Already Approved</string>
    <string name="amount">Amount:</string>
    <string name="amount_our_plans_are">Amount: Our plans are:</string>
    <string name="api_url">https://www.nistores.com.ng/</string>
    <string name="app_logo1">Nistores Logo</string>
    <string name="app_name">Nistores</string>
    <string name="approve_delivery_order">Approve this order</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="awaiting_payment">Awaiting Payment</string>
    <string name="back_navigation">Back navigation</string>
    <string name="back_to_home">Back to home</string>
    <string name="bank">Bank : GTBank </string>
    <string name="btn_sign_in">Sign in</string>
    <string name="business_fly">With Nistores you can make your Business Fly</string>
    <string name="call_now">Call now</string>
    <string name="call_us">For instant Help, Call our Customer Care Representative on +2349060155912</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="categories">Categories</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="click_to_upload">Click to upload</string>
    <string name="click_to_upload_more">Click to upload more</string>
    <string name="click_to_select">Click to select picture</string>
    <string name="complete_reg">Complete Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_receiving">Confirm Receiving</string>
    <string name="contact">Contact</string>
    <string name="contact_for_details">Contact for details</string>
    <string name="contact_number">+2349060155912</string>
    <string name="contacts">Contacts</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_store">Create New Store</string>
    <string name="create_store">Create Store</string>
    <string name="create_ticket">Create Request Ticket</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="confirm">Confirm</string>
    <string name="continua">Continue</string>
    <string name="copy_number_out_select_payment">Copy this number out and select a payment method</string>
    <string name="could_not_fetch_stores">"Couldn't get your stores"</string>
    <string name="could_not_fetch_categories">"Couldn't get all categories"</string>
    <string name="could_not_fetch_interests">"Couldn't get all interests"</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">123</string>
    <string name="dashboard">Dashboard</string>
    <string name="default_picture">Default Picture</string>
    <string name="delete">Delete</string>
    <string name="deliver_order">Deliver Order</string>
    <string name="delivered_order">Delivered Order</string>
    <string name="delivery_order_channel_name">Delivery Orders</string>
    <string name="delivery_order_channel_desc">Notifies you of the progress in your delivery</string>
    <string name="delivery_orders">Delivery Orders</string>
    <string name="deliveryOrder1">Initiate delivery by clicking on the "Initiate Delivery" button at the bottom of this page</string>
    <string name="deliveryOrder2">An order number will be automatically generated</string>
    <string name="deliveryOrder3">You will be taken to a page where you will fill the delivery order form</string>
    <string name="deliveryOrder4">Click on any of the states to see delivery order numbers coming to the state</string>
    <string name="description">Description</string>
    <string name="depositor_name">Depositor name: Your store number first , then the first word of your store name eg LAG00186 Ginotek, ABJ10560 Sunshine,ANB16800 Emmalex.</string>
    <string name="depositor_name2">"Depositor name: Your delivery order number first , then your full name. eg NS175–20181130–0002 Olatunde Amara"</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="easy_location">Your products are displayed to people around you who can easily locate you for bulk supplies</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_store">Edit Store</string>
    <string name="email">Email</string>
    <string name="enter_all_item_price">Enter total price of all the items</string>
    <string name="enter_your_card_details">Enter your card details to pay</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_store_number">Enter store number</string>
    <string name="error_occur">Sorry an error occurred.</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="explore_stores">Explore Stores</string>
    <string name="favourites">Favourites</string>
    <string name="featured_ad">Featured Ad</string>
    <string name="first_name">First Name</string>
    <string name="follow">Follow</string>
    <string name="follow_store">Follow Store</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="hello_business_fragment">Hello Business fragment</string>
    <string name="hello_chats_fragment">Hello chat fragment</string>
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_port_fragment">Hello display port fragment</string>
    <string name="hello_top_fragment">Hello top posts fragment</string>
    <string name="help_desk">Help Desk</string>
    <string name="hint_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="how_help">How can we help you?</string>
    <string name="how_to_make_bank_payment">How to make bank payment</string>
    <string name="how_to_make_payment_via_mobile">How to make payment through mobile transfer</string>
    <string name="in_stock">In Stock</string>
    <string name="initiate_delivery">Initiate Delivery</string>
    <string name="instructions">Instructions</string>
    <string name="interests">Interests</string>
    <string name="last_name">Last Name</string>
    <string name="live_product_photos">Live Photos of Product</string>
    <string name="load_product_pic">Loading Product Picture/</string>
    <string name="loading">loading…</string>
    <string name="log_in_intro">Log in to get in touch with exotic businesses around you.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="main_photo">Main Photo</string>
    <string name="make_comment_to_confirm">Make a comment and click on the confirm button</string>
    <string name="manage_products">Manage Products</string>
    <string name="member_since">Member Since</string>
    <string name="members">Members</string>
    <string name="message_owner">Message Owner</string>
    <string name="messages">Messages</string>
    <string name="mm">MM</string>
    <string name="month_plan_1">1 month = 2000</string>
    <string name="month_plan_3">3 months = 5000</string>
    <string name="month_plan_6">6 months = 10000</string>
    <string name="month_plan_12">1 year = 20000</string>
    <string name="more_photos">More Photos</string>
    <string name="my_stores">My Stores</string>
    <string name="narration_description">"Narration/Description: Your store number: eg. eng00002, abj00275, ENG00586 etc "</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="negotiate">Negotiate</string>
    <string name="negotiate_convince">You can negotiate and convince buyers</string>
    <string name="network_error">Network Error Occurred.</string>
    <string name="no_account">"Don't have an account?"</string>
    <string name="no_comment_from_receiver">No comment yet from the receiver</string>
    <string name="no_data">No data at the moment</string>
    <string name="no_notifications">No Notification</string>
    <string name="no_transaction_yet">No transaction yet</string>
    <string name="notification">Notification</string>
    <string name="open_camera">Open Camera</string>
    <string name="or">OR</string>
    <string name="order_number">Order Number</string>
    <string name="order_content_desc">Order Content Description</string>
    <string name="osho_free">"It's Free"</string>
    <string name="order_status">Order Status</string>
    <string name="out_stock">Out of Stock</string>
    <string name="own_store">Own a Store</string>
    <string name="owner">Owner</string>
    <string name="owner_profile">Owner Profile</string>
    <string name="package_sent">Package Sent</string>
    <string name="password">Password</string>
    <string name="pay">Pay</string>
    <string name="pay_in_bank">Pay in the Bank (Bank Deposit)</string>
    <string name="pay_for_order">Pay for this order</string>
    <string name="pay_through_agents">Pay through our agents (call our agents to help you make payment)</string>
    <string name="pay_with_atm">Pay with Credit Card (ATM Card)</string>
    <string name="pay_with_bank">Pay with Bank (Acc Number)</string>
    <string name="pay_with_mobile">Pay with  Mobile Transfer (Mobile App)</string>
    <string name="payment_instruction">Payment Instruction</string>
    <string name="payment_received">Payment Received</string>
    <string name="phone_no">Phone No</string>
    <string name="phone_no_your_phone">Phone no: Your phone number </string>
    <string name="polls">Polls</string>
    <string name="price">Price</string>
    <string name="proceed">Proceed</string>
    <string name="product_name">Product Name</string>
    <string name="profile">Profile</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="retry">Retry</string>
    <string name="robust_network">Take advantage of our robust social network</string>
    <string name="search">Search</string>
    <string name="secure_store">You can now secure a store on Nistores and display your products to millions of viewers Nationwide for free.</string>
    <string name="select_according_to_budget">Select according to your budget.</string>
    <string name="select_category">Select Category</string>
    <string name="select_store">Select Store</string>
    <string name="settings">Settings</string>
    <string name="simple_fast">Its simple, fast and easy.</string>
    <string name="sub_history">Subscription History</string>
    <string name="success_product">Your product has been successfully uploaded.</string>
    <string name="terms_policy">Terms and Policy</string>
    <string name="title_display_port">Display Port</string>
    <string name="turn_off_notif">Turn off Notifications</string>
    <string name="unique_url">You can have a Unique URL/web address for your store that you can share on other platforms.</string>
    <string name="upload_product">Upload Product</string>
    <string name="upload_another_product">Upload another product</string>
    <string name="weekend_giveaways">Weekend Giveaways</string>
    <string name="why_nistores">Why Nistores?</string>
</resources>