<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/font_three" android:textColor="@android:color/white" android:background="@color/webColor" android:padding="@dimen/three_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/secure_store"/>
        <TextView android:textSize="28sp" android:textAlignment="center" android:textColor="@color/webColor" android:padding="@dimen/four_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/why_nistores"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/osho_free" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/robust_network" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/negotiate_convince" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/easy_location" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unique_url" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/business_fly" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="@dimen/font_18" android:textColor="@color/textColor" android:padding="@dimen/one_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/simple_fast" android:drawableLeft="@drawable/ic_lens_colored" android:drawablePadding="@dimen/one_level_margin" android:drawableStart="@drawable/ic_lens_colored"/>
        <TextView android:textSize="28sp" android:textAlignment="center" android:textColor="@color/webColor" android:padding="@dimen/four_level_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/are_you_ready"/>
        <android.support.v7.widget.AppCompatButton android:theme="@style/ButtonOrange" android:textSize="20sp" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@+id/btn_proceed" android:padding="10dp" android:layout_width="200dp" android:layout_height="60dp" android:layout_margin="@dimen/two_level_margin" android:text="@string/proceed"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
