<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Messages, Notifications, Search", should appear as action button if possible -->
    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_menu_message"
        android:title="@string/messages"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/notification"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>


    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />-->
</menu>
